--- a/app/assets/stylesheets/components/_click_me_button.scss
+++ b/app/assets/stylesheets/components/_click_me_button.scss
@@ -1,5 +1,23 @@
+click-me-div {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+}
+
 a {
     color: white;
     text-decoration: none !important;
-    margin: 0 auto;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+}
+
+a:hover {
+        font-family: 'Monsieur La Doulaise',
+        cursive;
+        font-size: 3rem;
+        transition-duration: 0.5s;
 }
