christmas story page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,4 +14,6 @@
  *= require_self
  */
 
- @import 'components/click_me_button'
+ @import 'components/click_me_button';
+ @import 'components/snow';
+ @import 'components/christmas_story'
