--- a/app/views/pages/christmas_story_venardou.html.erb
+++ b/app/views/pages/christmas_story_venardou.html.erb
@@ -1,3 +1,4 @@
+<!-- SNOW -->
 <div class="snow"></div>
 <div class="snow"></div>
 <div class="snow"></div>
@@ -198,3 +199,102 @@
 <div class="snow"></div>
 <div class="snow"></div>
 <div class="snow"></div>
+
+<!-- DIV FOR STORY -->
+<div class="story">
+    <h1>
+        Christmas Story
+    </h1>
+    <div class="story-scroll">
+        <p>
+            “I simply can’t stand it anymore! It’s Christmas and I want to go out!” Brunhilde’s fingers flew over her mobile’s keyboard and her frustration was more than obvious.
+        </p>
+        <p>
+            “Well... I get it, but... do we have any other choice? We both know we don’t have the luxury of being able to pay fines if we are caught being outside after the curfew.” Atalanta’s answer appeared on screen and made Brunhilde nod but also sigh.
+        </p>
+        <p>
+            “You are right... I just hoped the measures to be a little relaxed during holidays. I mean... I can’t even meet up with my few friends and spend a day together!”
+        </p>
+        <p>
+            “Same here... I haven’t seen them almost a year...” A sad almost to tears emoji followed the message. “However, you can always find things that make you happy even for a while!” A new emoji, the one with star for eyes, appeared; Brunhilde smiled as she knew her digital pen friend used that when she was daydreaming.
+        </p>
+        <p>
+            “Oh? Like? I have already watched every series, movies and anime I like a couple of times during the current lockdown and there is no unread book left!”
+        </p>
+        <p>
+            “Yeah, same here, but how about use your imagination and fantasy to... let’s say travel to places with your mind? Doing that while listening to music is even better! It can be an excellent escape!” Atalanta was obviously quite excited.
+        </p>
+        <p>
+            “Hmm... sure that can help some hours roll by, but... doesn’t that leave a bitter taste when you ‘return’ to reality?”
+        </p>
+        <p>
+            “That is only if you choose to do so, if you choose to keep in mind how you felt during ‘travelling’ then it’s not so bad!” A sticker of a face in absolute bliss popped up on the screen.
+        </p>
+        <p>
+            Brunhilde chuckled; she liked how childish her friend was getting sometimes. Even though Atalanta was also forced to stay inside due to lockdown, she rarely let this fearsome pandemic terrorising the planet depress her entirely; Brunhilde admired that in her distant friend, because she often managed to pass on her positivity to Brunhilde and make her feel a little better about the whole situation.
+        </p>
+        <p>
+            They exchanged messages for a few more minutes, until Atalanta said goodnight... but not before managing to draw out of her friend the promise of just trying ‘travelling’ with her fantasy... and who knows? They might even end up finally meeting like that. Brunhilde smiled and then yawned; she was quite sleepy but knew she would once again fail to sleep for the bigger part of the night. She lied in bed, put on her headphones and her favourite classical music playing; she pulled the warm covers closer and slowly relaxed allowing the calm music carry her away as her eyelids fluttered heavy with sleep.
+        </p>
+        <p>
+            Next time Brunhilde opened her eyes she was surprised to find herself staring at the... starry night sky? She blinked a couple of times but there was no change and it was then that she realised the bed underneath her felt quite different; she felt the mattress a little but there was no mattress, only snow that strangely enough was not as cold as it should be!
+        </p>
+        <p>
+            Brunhilde was totally confused as she sat up and allowed her eyes to take in the place surrounding her. She was outside with no idea where exactly! The ground and the naked trees around were covered with snow... She kept staring around with half opened mouth, struggling to understand what the hell happened, when she heard sounds of a blade hitting on ice and a quite enthusiastic female voice calling her.
+        </p>
+        <p>
+            Then she saw a frozen pond in the middle of everything and a strange figure dancing on the ice! Brunhilde moved closer and slowly managed to make out that the figure was wearing... blue pyjamas and was coming towards her in great speed!! She had no time to move away before the figure bumped into her and squeezed her in a warm hug.
+        </p>
+        <p>
+            “See? I told you we might meet in one of our ‘travels’!” A voice Brunhilde knew from the rare voice messages was heard and when the figure released her from the tight embrace she saw the face she had seen in a couple Facebook pictures.
+        </p>
+        <p>
+            “Atalanta?” Brunhilde asked quite shocked.
+        </p>
+        <p>
+            Atalanta nodded enthusiastically and instantly started pulling Brunhilde to get on the pond and dance with her. Brunhilde resisted quite terrified, since she wore no ice skates and would end up falling and freezing.
+        </p>
+        <p>
+            “Are you sure you don’t wear ice skates?” Atalanta asked arching one eyebrow and smirking to her friend quite mischievously. Brunhilde took a look at her feet and was stunned to find that indeed she too wore a pair of black boots with blades that would allow her to walk on ice. “I told you, in that kind of travelling all you need is your fantasy and anything can happen! Come on!!”
+        </p>
+        <p>
+            Atalanta pulled harder and before Brunhilde could utter a word she was on the pond walking on the ice surprisingly easily, maintaining excellent balance and getting more and more confident as time passed. Soon, they were both dancing and twirling around so beautifully that perhaps even professional ice dancers would get jealous. The air was cold but so clean, so fresh that they could not help but breathe it greedily, filling their lungs with the most delicious air they had ever tasted. Their voices and giggles rose up to the sky as they kept dancing until they landed heavy and breathless on the snow at the side of the pond.
+        </p>
+        <p>
+            “That was awesome!! I never thought I could do something like that! I feel so light... like a feather. No troubles, no worries or pains! It’s amazing!” Brunhilde squealed happily; her eyes were sparkling like the stars were reflecting their light in them and her face as well as her body and heart felt so warm.
+        </p>
+        <p>
+            Atalanta chuckled in a similar state. “Didn’t I say so? You can do anything and be however you want in your fantasy! Sure, it’s not as good as it would be if we were doing it in reality but... this is quite exhilarating too.”
+        </p>
+        <p>
+            Brunhilde nodded. “So... is this all? Does it have to end now?”
+        </p>
+        <p>
+            “Um... do you want it to end?” Brunhilde shook her head. “Good! Then I believe we both have a couple of hours before we have to wake up.” Atalanta touched Brunhilde’s back lightly and surprisingly a pair of flimsy wings suddenly sprang from her shoulder blades, they were fairy’s wings!
+        </p>
+        <p>
+            Atalanta also had a pair and in an instant was hovering above her encouraging her to try them. Blunhilde did so and could not believe she was actually flying! After that, Atalanta guided her away from the pond and they started exploring the world around them, every nook and every corner; it was amazing, since they could lightly land on some last still remaining leaves on trees, or enter a dark hollow, admire each frozen petal of some scarce flowers and so many other things. Either they were the ones that had diminished to the size of little fairies or the world had gotten immensely bigger; the point was that everything was so beautiful, enchanting, glorious and... even a little scary as they also saw all the quite disgusting details of bugs wandering around. That freaked them out quite a bit, to be honest!
+        </p>
+        <p>
+            They landed back on the snow giggling after flying, while screaming, away from a fuzzy centipede... the poor creature seemed stunned and even more scared by their screams than what they got by simply seeing it munching on a yellow leaf. They continued giggling and talking about all the wonders they had seen until sleep came over them and took them in his arms right where they were lying on the snow.
+        </p>
+        <p>
+            Brunhilde felt so invigorated and refreshed as she kept stretching while waking up in her warm bed, she slowly opened her eyes and realised a music was repeating itself in her ears. Oh, right. She fell asleep while listening to Tchaikovsky on her mp3 player and either she had accidentally pressed the repeat button or the playlist stuck for some reason and it kept playing the Dance of the Sugar Plum Fairy all through the night.
+        </p>
+        <p>
+            “Well... that could explain the so strange dream about fairies and stuff... although it was indeed awesome! I have to tell Atalanta!” Brunhilde thought and immediately grabbed her mobile to send her friend a message.
+        </p>
+        <p>
+            She did not have the time, because her internet friend had already sent her a message asking her about what she dreamed that night and describing her own dream... which was exactly the same as Brunhilde’s! Brunhilde got so surprised by the so strange coincidence and by Atalanta’s excitement and certainty of indeed meeting in a dream that they kept talking about it all day. 
+        </p>
+        <p>
+            Such a unique experience that led to such a unique Christmas day, because the day that dawned after the dream was the 25th of December; a day expected to be a lonely one, since everyone was shut in their houses due to one more lockdown caused by the Covid-19 pandemic that tortured the planet for a year now. The ones that had their families with them or really close were lucky, but Brunhilde and Atalanta did not and were not allowed to travel to where their families were. But thankfully, they had each other, even through the typed messages on a mobile’s or a computer’s screen and despite the distance. The day rolled by very quickly and pleasant and when night came they promised to meet again in a dream, have a great time and... who knows? They might even meet other friends on the way.
+        </p>
+        <p>
+            Brunhilde in Berlin and Atalanta in Athens had never met face to face, they began talking via Facebook, through the comments under a post in a fan group dedicated to an anime they both loved. They continued through private messages and their discussions moved beyond the anime, beyond the adventures and shenanigans of a certain demon butler and his child master; they found they shared so many things, ideas and now dreams... literally. Sure, they wanted to properly meet one day but until that day comes, they would continue keeping company to each other like this, defying technical difficulties and distance.
+        </p>
+        <p>
+            They were determined to never be alone again during holidays and their dreams became a precious way of escaping reality even for a while as long as this global nightmare continued.
+        </p>
+    </div>
+</div>
