added about button

--- a/app/views/pages/christmas_story_venardou.html.erb
+++ b/app/views/pages/christmas_story_venardou.html.erb
@@ -297,4 +297,5 @@
             They were determined to never be alone again during holidays and their dreams became a precious way of escaping reality even for a while as long as this global nightmare continued.
         </p>
     </div>
+    <%= link_to  "About", "pages#about" %>
 </div>
