--- a/app/views/pages/christmas_story_venardou.html.erb
+++ b/app/views/pages/christmas_story_venardou.html.erb
@@ -203,7 +203,7 @@
 <!-- DIV FOR STORY -->
 <div class="story">
     <h1>
-        Christmas Story
+        A Christmas Escape in Fantasy 
     </h1>
     <div class="story-scroll">
         <p>
