detail work and footer

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,4 +16,5 @@
 
  @import 'components/click_me_button';
  @import 'components/snow';
- @import 'components/christmas_story'
+ @import 'components/christmas_story';
+ @import 'components/footer'
