--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,5 +12,8 @@
 
   <body>
     <%= yield %>
+    <div class="footer-container">
+    <%= render "shared/footer" %>
+    </div>
   </body>
 </html>
