--- a/app/assets/stylesheets/components/_click_me_button.scss
+++ b/app/assets/stylesheets/components/_click_me_button.scss
@@ -1,4 +1,4 @@
-click-me-div {
+.click-me-div {
     width: 100%;
     height: 100%;
     text-align: center;
@@ -9,10 +9,12 @@ a {
     text-decoration: none !important;
     margin: 0;
     position: absolute;
-    top: 45%;
+    top: 40%;
     left: 50%;
     margin-right: -50%;
-    transform: translate(-50%, -50%)
+    transform: translate(-50%, -50%);
+    padding: 20px 20px 20px 20px;
+    border: solid 1px white;
 }
 
 a:hover {
@@ -20,4 +22,5 @@ a:hover {
         cursive;
         font-size: 3rem;
         transition-duration: 0.5s;
+        border: none;
 }
