--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,3 @@
 <div class="footer">
-Open source coded by <a href='https://crafted-codes.netlify.app/', class="craftedcodes">craftedcodes</a>
+Open source coded by <a href='https://crafted-codes.netlify.app/' class="craftedcodes" target="_blank">craftedcodes</a>
 </div>
