making it responsive and making the look of the story page and about page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,4 +17,8 @@
  @import 'components/click_me_button';
  @import 'components/snow';
  @import 'components/christmas_story';
- @import 'components/footer'
+ @import 'components/footer';
+ @import 'components/heading';
+ @import 'components/card';
+ @import 'components/scroll';
+ @import 'components/about'
