--- a/app/views/pages/christmas_story_venardou.html.erb
+++ b/app/views/pages/christmas_story_venardou.html.erb
@@ -200,12 +200,12 @@
 <div class="snow"></div>
 <div class="snow"></div>
 
-<!-- DIV FOR STORY -->
-<div class="story">
-    <h1>
+<!-- DIV FOR CARD -->
+<div class="card">
+    <h1 class="heading">
         A Christmas Escape in Fantasy 
     </h1>
-    <div class="story-scroll">
+    <div class="scroll">
         <p>
             “I simply can’t stand it anymore! It’s Christmas and I want to go out!” Brunhilde’s fingers flew over her mobile’s keyboard and her frustration was more than obvious.
         </p>
@@ -297,5 +297,5 @@
             They were determined to never be alone again during holidays and their dreams became a precious way of escaping reality even for a while as long as this global nightmare continued.
         </p>
     </div>
-    <%= link_to  "About", "pages#about" %>
+    <%= link_to  "About", "/about", class: 'about' %>
 </div>
