--- a/app/assets/stylesheets/components/_christmas_story.scss
+++ b/app/assets/stylesheets/components/_christmas_story.scss
@@ -1,28 +1,17 @@
-.story {
-    z-index: 3;
-    height: 70%;
-    width: 70%;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    top: 50%;
-    left: 50%;
-    background: white;
-    padding: 3em;
-    height: 320px;
-    border-radius: 20px;
-    border-left: 1px solid white;
-    border-top: 1px solid white;
-    backdrop-filter: blur(10px);
-    box-shadow: 20px 20px 40px -6px;
-    text-align: center;
+.about {
+        font-size: 1.5rem;
+        margin-top: 25%;
+        padding: 5px 15px 5px 15px;
 
-    h1 {
-        font-family: 'Monsieur La Doulaise',
-        cursive;
-        font-size: 4rem;
+        @media screen and (max-width:380px) {
+            margin-top: 97%;
+        }
+
+        @media screen and (min-width:750px) {
+            margin-top: 72%;
+        }
     }
 
-    .story-scroll {
-        overflow-y: 70%;
+.about:hover {
+        font-size: 2rem;
     }
-}
