--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -26,6 +26,9 @@
 .craftedcodes {
     margin-top: 0.5%;
     border: none;
+    color: white;
+    text-decoration: none !important;
+
     @media screen and (max-width:800px) {
         font-size: 0.8rem;
     }
@@ -36,4 +39,10 @@
     cursive;
     font-size: 1rem;
     transition-duration: 0.5s;
+    background: linear-gradient(345deg, #bf953f 15%, #fcf6ba 35%, #b38728 50%, #fbf5b7 65%, #aa771c 85%);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
 }
