--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -20,4 +20,24 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit fugit neque, nesciunt consectetur numquam, nemo debitis dolore natus molestias, in eum inventore? Animi officia in eligendi quam? Culpa, eius ea?
         </p>
     </div>
+    <ul>
+        <li>
+            <h4>
+            Lea Schumacher
+            </h4>
+            <h5>
+            FULL STACK WEB DEVELOPER
+            </h5>
+            <a href="mailto:craftedcodesberlin@gmail.com" class="contact" target="_blank"> Contact</a>
+        </li>
+        <li class="marianna-venardou">
+            <h4>
+            Marianna Venardou
+            </h4>
+            <h5>
+            WRITER AND TRANSLATOR
+            </h5>
+            <a href="mailto:mariannavenardou@yahoo.com" class="contact" target="_blank"> Contact</a>
+        </li>
+    </ul>
 </div>
