--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,1 @@
-<div class="click-me-div"><%= link_to  "Click Me", "/christmas_story_venardou" %></div>
+<div class="click-me-div"><%= link_to  "Click Me", "/christmas_story_venardou", class: "click-me" %></div>
