--- a/app/assets/stylesheets/components/_about.scss
+++ b/app/assets/stylesheets/components/_about.scss
@@ -1,6 +1,9 @@
 .about-heading {
+    font-size: 2.5rem;
+
     @media screen and (max-width:380px) {
         margin-bottom: 2%;
+        font-size: 2rem;
     }
 
     @media screen and (min-width:750px) {
@@ -10,9 +13,68 @@
 
 .about {
     height: 50%;
+    margin-top: 70%;
     
     @media screen and (max-width:380px) {
+        margin-top: 3%;
         height: 50%;
         font-size: small;
+    }
+    p {
+        font-size: 0.9rem;
+    }
+}
+
+ul {
+    text-align: left;
+    display: flex;
+    flex-direction: row;
+    width: 70%;
+
+    li {
+        list-style: none;
+        color: #f4f4f4;
+        margin-left: -8%;
+
+        @media screen and (max-width:380px) {
+            margin-left: -17%;
+        }
+
+        h5 {
+            font-size: 0.5rem;
+            margin-top: -15%;
+        }
+
+        .contact {
+            font-size: 0.7rem;
+            color: white;
+            text-decoration: none;
+            text-align: left;
+            border: none;
+
+            @media screen and (max-width:800px) {
+                font-size: 0.8rem;
+            }
+        }
+
+        .contact:hover {
+            font-family: 'Monsieur La Doulaise',
+            cursive;
+            font-size: 1.1rem;
+            background: linear-gradient(345deg, #bf953f 15%, #fcf6ba 35%, #b38728 50%, #fbf5b7 65%, #aa771c 85%);
+            -webkit-background-clip: text;
+            -moz-background-clip: text;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+            -moz-text-fill-color: transparent;
+            transition-duration: 0.5s;
+        }
+    }
+    
+    .marianna-venardou {
+        margin-left: auto;
+        @media screen and (max-width:380px) {
+            margin-left: 6%;
+        }
     }
 }
