--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,4 +21,5 @@
  @import 'components/heading';
  @import 'components/card';
  @import 'components/scroll';
- @import 'components/about'
+ @import 'components/about';
+ @import 'components/title'
