--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -5,19 +5,22 @@
 </h1>
     <div class="scroll about">
         <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit fugit neque, nesciunt consectetur numquam, nemo debitis dolore natus molestias, in eum inventore? Animi officia in eligendi quam? Culpa, eius ea?
+        Hello everyone!
         </p>
         <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit fugit neque, nesciunt consectetur numquam, nemo debitis dolore natus molestias, in eum inventore? Animi officia in eligendi quam? Culpa, eius ea?
+        This is Lea Schumacher and Marianna Venardou, two friends that welcome you to our first, joined, non-profit Christmas project!
         </p>
         <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit fugit neque, nesciunt consectetur numquam, nemo debitis dolore natus molestias, in eum inventore? Animi officia in eligendi quam? Culpa, eius ea?
+        Our goal is simply to cheer people up during these dark times and especially during holidays when things might seem even darker and lonelier.
         </p>
         <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit fugit neque, nesciunt consectetur numquam, nemo debitis dolore natus molestias, in eum inventore? Animi officia in eligendi quam? Culpa, eius ea?
+        Lea Schumacher came up with the original idea and coded the website, while Marianna Venardou wrote the story drawing inspiration from Tchaikovsky’s music.
         </p>
         <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit fugit neque, nesciunt consectetur numquam, nemo debitis dolore natus molestias, in eum inventore? Animi officia in eligendi quam? Culpa, eius ea?
+        Please enjoy!
+        </p>
+        <p>
+        We wish you all a Merry Christmas and a Happy New Year!
         </p>
     </div>
     <ul>
