--- a/app/assets/stylesheets/components/_about.scss
+++ b/app/assets/stylesheets/components/_about.scss
@@ -37,7 +37,11 @@ ul {
         margin-left: -8%;
 
         @media screen and (max-width:380px) {
-            margin-left: -17%;
+            margin-left: -23%;
+        }
+
+        @media screen and (min-width:1000px) {
+            margin: 0 auto;
         }
 
         h5 {
