--- a/app/assets/stylesheets/components/_title.scss
+++ b/app/assets/stylesheets/components/_title.scss
@@ -1,6 +1,11 @@
+a {
+    text-decoration: none !important;
+}
+
 .title-heading {
     font-style: italic;
     font-size: 4rem;
+    text-decoration: none !important;
     background: linear-gradient(345deg, #bf953f 15%, #fcf6ba 35%, #b38728 50%, #fbf5b7 65%, #aa771c 85%);
     -webkit-background-clip: text;
     -moz-background-clip: text;
