--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-  <h1 class="title-heading"><%= title 'Christmas Gift 2020' %></h1>
+  <a href="#"><h1 class="title-heading"><%= title 'Christmas Gift 2020' %></h1></a>
     <%= yield %>
     <div class="footer-container">
     <%= render "shared/footer" %>
