raising responsiveness and adding scroll animation

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,4 +22,5 @@
  @import 'components/card';
  @import 'components/scroll';
  @import 'components/about';
- @import 'components/title'
+ @import 'components/title';
+ @import 'components/mouse'
