--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,15 @@
     <title>ChristmasGift2020</title>
     <%= favicon_link_tag %>
     <%= display_meta_tags site: 'Christmas Gift 2020' %>
+    <!--META TAGS -->
+    <meta property="og:title" content="Christmas Gift 2020">
+    <meta property="og:description" content="A Christmas gift for the world in the dark COVID times of 2020. This is a non-profit projects of two European friends seperated by many borders, connected through the internet.">
+    <meta property="og:image" content="app/assets/images/cover.png">
+    <!--TWITTER META TAGS -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Christmas Gift 2020">
+    <meta name="twitter:description" content="A Christmas gift for the world in the dark COVID times of 2020. This is a non-profit projects of two European friends seperated by many borders, connected through the internet.">
+    <meta name="twitter:image" content="app/assets/images/cover.png">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
