--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -20,9 +20,17 @@
         Please enjoy!
         </p>
         <p>
+        <span>
         We wish you all a Merry Christmas and a Happy New Year!
+        </span>
         </p>
     </div>
+    <span class="scroll-btn hide" id="hidden">
+		<span class="mouse">
+			<span>
+			</span>
+		</span>
+    </span>
     <ul>
         <li>
             <h4>
