--- a/app/views/pages/christmas_story_venardou.html.erb
+++ b/app/views/pages/christmas_story_venardou.html.erb
@@ -297,6 +297,12 @@
             They were determined to never be alone again during holidays and their dreams became a precious way of escaping reality even for a while as long as this global nightmare continued.
         </p>
     </div>
+    <span class="scroll-btn">
+		<span class="mouse">
+			<span>
+			</span>
+		</span>
+    </span>
     <div class="about-div">
     <%= link_to  "About", "/about", class: 'about-btn' %>
     </div>
