--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -18,8 +18,8 @@
     color: white;
     display: inline-block;
     
-    @media screen and (max-width:800px) {
-        font-size: 0.8rem;
+    @media screen and (min-width:800px) {
+        font-size: 1rem;
     }
 }
 
@@ -27,9 +27,10 @@
     border: none;
     color: white;
     text-decoration: none !important;
+    font-size: 1rem;
 
     @media screen and (min-width:800px) {
-        font-size: 0.8rem;
+        font-size: 1rem;
     }
 }
 
