--- a/app/assets/stylesheets/components/_mouse.scss
+++ b/app/assets/stylesheets/components/_mouse.scss
@@ -1,3 +1,45 @@
+// CREDITS TO https://codepen.io/svenschebaum/pen/IlABK
+
+.scroll-btn {
+    display: block;
+    position: absolute;
+    left: 86%;
+    bottom: 45%;
+    text-align: center;
+}
+
+.scroll-btn .mouse {
+    position: relative;
+    display: block;
+    width: 28px;
+    height: 48px;
+    margin: 0 auto 20px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: 1px solid white;
+    border-radius: 23px;
+}
+
+.scroll-btn .mouse>* {
+    position: absolute;
+    display: block;
+    top: 29%;
+    left: 50%;
+    width: 8px;
+    height: 8px;
+    margin: -4px 0 0 -4px;
+    background: white;
+    border-radius: 50%;
+    -webkit-animation: ani-mouse 2.5s linear infinite;
+    -moz-animation: ani-mouse 2.5s linear infinite;
+    animation: ani-mouse 2.5s linear infinite;
+}
+
+.hide {
+    display: none;
+}
+
 @-webkit-keyframes ani-mouse {
     0% {
         opacity: 1;
@@ -62,69 +104,4 @@
         opacity: 0;
         top: 29%;
     }
-}
-
-.scroll-btn {
-    display: block;
-    position: absolute;
-    left: 86%;
-    bottom: 45%;
-    text-align: center;
-}
-
-.scroll-btn>* {
-    display: inline-block;
-    line-height: 10px;
-    font-size: 13px;
-    font-weight: normal;
-    color: #7f8c8d;
-    color: #ffffff;
-    font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    letter-spacing: 2px;
-}
-
-.scroll-btn>*:hover,
-.scroll-btn>*:focus,
-.scroll-btn>*.active {
-    color: #ffffff;
-}
-
-.scroll-btn>*:hover,
-.scroll-btn>*:focus,
-.scroll-btn>*:active,
-.scroll-btn>*.active {
-    opacity: 0.8;
-    filter: alpha(opacity=80);
-}
-
-.scroll-btn .mouse {
-    position: relative;
-    display: block;
-    width: 28px;
-    height: 48px;
-    margin: 0 auto 20px;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    border: 1px solid white;
-    border-radius: 23px;
-}
-
-.scroll-btn .mouse>* {
-    position: absolute;
-    display: block;
-    top: 29%;
-    left: 50%;
-    width: 8px;
-    height: 8px;
-    margin: -4px 0 0 -4px;
-    background: white;
-    border-radius: 50%;
-    -webkit-animation: ani-mouse 2.5s linear infinite;
-    -moz-animation: ani-mouse 2.5s linear infinite;
-    animation: ani-mouse 2.5s linear infinite;
-}
-
-.hide {
-    display: none;
 }
