--- a/app/assets/stylesheets/components/_snow.scss
+++ b/app/assets/stylesheets/components/_snow.scss
@@ -1,3 +1,5 @@
+// CREDITS TO https://codepen.io/alphardex/pen/dyPorwJ
+
 @function random_range($min, $max) {
     $rand: random();
     $random_range: $min + floor($rand * (($max - $min) + 1));
