--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     <meta property="og:title" content="Christmas Gift 2020">
     <meta property="og:description" content="A Christmas gift for the world in the dark COVID times of 2020. This is a non-profit projects of two European friends seperated by many borders, connected through the internet.">
     <meta property="og:image" content="app/assets/images/cover.png">
+    <meta name="theme-color" content="#fbf5b7">
     <!--TWITTER META TAGS -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Christmas Gift 2020">
@@ -21,7 +22,9 @@
   </head>
 
   <body>
-  <a href="#"><h1 class="title-heading"><%= title 'Christmas Gift 2020' %></h1></a>
+    <%= link_to root_path do %>
+    <h1 class="title-heading"><%= title 'Christmas Gift 2020' %></h1>
+    <% end %>
     <%= yield %>
     <div class="footer-container">
     <%= render "shared/footer" %>
