--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,11 +4,12 @@
     <title>ChristmasGift2020</title>
     <%= favicon_link_tag %>
     <%= display_meta_tags site: 'Christmas Gift 2020' %>
-    <!--META TAGS -->
+    <meta name="theme-color" content="#fbf5b7">
+    <!--OG META TAGS -->
     <meta property="og:title" content="Christmas Gift 2020">
     <meta property="og:description" content="A Christmas gift for the world in the dark COVID times of 2020. This is a non-profit projects of two European friends seperated by many borders, connected through the internet.">
     <meta property="og:image" content="app/assets/images/cover.png">
-    <meta name="theme-color" content="#fbf5b7">
+    <meta property="og:url" content="https://christmas-gift-2020.herokuapp.com/">
     <!--TWITTER META TAGS -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Christmas Gift 2020">
