--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ChristmasGift2020</title>
+    <title><%= meta_title %></title>
     <%= favicon_link_tag %>
-    <%= display_meta_tags site: 'Christmas Gift 2020' %>
+    <%= display_meta_tags site: '<%= meta_title %>' %>
     <meta name="theme-color" content="#fbf5b7">
     <!--OG META TAGS -->
-    <meta property="og:title" content="Christmas Gift 2020">
-    <meta property="og:description" content="A Christmas gift for the world in the dark COVID times of 2020. This is a non-profit projects of two European friends seperated by many borders, connected through the internet.">
-    <meta property="og:image" content="app/assets/images/cover.png">
+    <meta property="og:title" content="<%= meta_title %>">
+    <meta property="og:description" content="<%= meta_description %>">
+    <meta property="og:image" content="<%= meta_image %>">
     <meta property="og:url" content="https://christmas-gift-2020.herokuapp.com/">
     <!--TWITTER META TAGS -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Christmas Gift 2020">
+    <meta name="twitter:title" content="<%= meta_title %>">
     <meta name="twitter:description" content="A Christmas gift for the world in the dark COVID times of 2020. This is a non-profit projects of two European friends seperated by many borders, connected through the internet.">
-    <meta name="twitter:image" content="app/assets/images/cover.png">
+    <meta name="twitter:image" content="<%= meta_image %>">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
