--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,31 +4,31 @@
     <title><%= meta_title %></title>
     <%= favicon_link_tag %>
     <%= display_meta_tags site: '<%= meta_title %>' %>
-    <meta name="theme-color" content="#fbf5b7">
+    <meta name='theme-color' content='#fbf5b7'>
     <!--OG META TAGS -->
-    <meta property="og:title" content="<%= meta_title %>">
-    <meta property="og:description" content="<%= meta_description %>">
-    <meta property="og:image" content="<%= meta_image %>">
-    <meta property="og:url" content="https://christmas-gift-2020.herokuapp.com/">
+    <meta property='og:title' content='<%= meta_title %>' />
+    <meta property='og:description' content='<%= meta_description %>' />
+    <meta property='og:image' content='<%= meta_image %>' />
+    <meta property='og:url' content='https://christmas-gift-2020.herokuapp.com/'>
     <!--TWITTER META TAGS -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="<%= meta_title %>">
-    <meta name="twitter:description" content="A Christmas gift for the world in the dark COVID times of 2020. This is a non-profit projects of two European friends seperated by many borders, connected through the internet.">
-    <meta name="twitter:image" content="<%= meta_image %>">
+    <meta name='twitter:card' content='summary_large_image'>
+    <meta name='twitter:title' content='<%= meta_title %>'>
+    <meta name='twitter:description' content='<%= meta_description %>'>
+    <meta name='twitter:image' content='<%= meta_image %>'>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <%= link_to root_path do %>
-    <h1 class="title-heading"><%= title 'Christmas Gift 2020' %></h1>
+    <h1 class='title-heading'><%= title 'Christmas Gift 2020' %></h1>
     <% end %>
     <%= yield %>
-    <div class="footer-container">
-    <%= render "shared/footer" %>
+    <div class='footer-container'>
+    <%= render 'shared/footer' %>
     </div>
   </body>
 </html>
