meta tags correction

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title><%= meta_title %></title>
     <%= favicon_link_tag %>
-    <%= display_meta_tags site: '<%= meta_title %>' %>
+    <%= display_meta_tags site: 'Christmas Gift 2020' %>
     <meta name='theme-color' content='#fbf5b7'>
     <!--OG META TAGS -->
     <meta property='og:title' content='<%= meta_title %>' />
