meta tags correction

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= meta_title %></title>
+    <title>Christmas Gift 2020</title>
     <%= favicon_link_tag %>
     <%= display_meta_tags site: 'Christmas Gift 2020' %>
     <meta name='theme-color' content='#fbf5b7'>
