--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,12 @@
     <meta property="og:title" content="Christmas Gift 2020">
     <meta property="og:description" content="A Christmas gift for the world in the dark COVID times of 2020. This is a non-profit projects of two European friends seperated by many borders, connected through the internet.">
     <meta property="og:image" content="app/assets/images/cover.png">
-    <meta property='og:url' content='<%= meta_image %>'>
+    <meta property='og:url' content='https://christmas-gift-2020.herokuapp.com/'>
     <!--TWITTER META TAGS -->
     <meta name='twitter:card' content='summary_large_image'>
     <meta name="twitter:title" content="Christmas Gift 2020">
     <meta name='twitter:description' content="A Christmas gift for the world in the dark COVID times of 2020. This is a non-profit projects of two European friends seperated by many borders, connected through the internet.">
-    <meta name='twitter:image' content='<%= meta_image %>'>
+    <meta name='twitter:image' content='https://christmas-gift-2020.herokuapp.com/'>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
