--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -39,7 +39,9 @@
             <h5>
             FULL STACK WEB DEVELOPER
             </h5>
+            <div class="contact">
             <a href="mailto:craftedcodesberlin@gmail.com" class="contact" target="_blank"> Contact</a>
+            </div>
         </li>
         <li class="marianna-venardou">
             <h4>
@@ -48,7 +50,9 @@
             <h5>
             WRITER AND TRANSLATOR
             </h5>
+            <div class="contact">
             <a href="mailto:mariannavenardou@yahoo.com" class="contact" target="_blank"> Contact</a>
+            </div>
         </li>
     </ul>
 </div>
