try a stack overflow answer regarding og meta tags and fixing a typo

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html prefix="og: http://ogp.me/ns#">
 <html>
   <head>
     <title>Christmas Gift 2020</title>
@@ -7,13 +7,13 @@
     <meta name="theme-color" content="#fbf5b7">
     <!--OG META TAGS -->
     <meta property="og:title" content="Christmas Gift 2020">
-    <meta property="og:description" content="A Christmas gift for the world in the dark COVID times of 2020. This is a non-profit projects of two European friends seperated by many borders, connected through the internet.">
+    <meta property="og:description" content="A Christmas gift for the world in the dark COVID times of 2020. This is a non-profit project of two European friends seperated by many borders, connected through the internet.">
     <meta property="og:image" content="app/assets/images/cover.png">
     <meta property='og:url' content='https://christmas-gift-2020.herokuapp.com/'>
     <!--TWITTER META TAGS -->
     <meta name='twitter:card' content='summary_large_image'>
     <meta name="twitter:title" content="Christmas Gift 2020">
-    <meta name='twitter:description' content="A Christmas gift for the world in the dark COVID times of 2020. This is a non-profit projects of two European friends seperated by many borders, connected through the internet.">
+    <meta name='twitter:description' content="A Christmas gift for the world in the dark COVID times of 2020. This is a non-profit project of two European friends seperated by many borders, connected through the internet.">
     <meta name='twitter:image' content='https://christmas-gift-2020.herokuapp.com/'>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
