--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,14 +6,16 @@
     <%= display_meta_tags site: 'Christmas Gift 2020' %>
     <meta name='theme-color' content='#fbf5b7'>
     <!--OG META TAGS -->
-    <meta property='og:title' content='Christmas Gift 2020' />
-    <meta property='og:image' content='app/assets/images/cover.png' />
-    <meta property='og:description' content='A Christmas gift for the world in the dark COVID times of 2020. This is a non-profit project of two European friends seperated by many borders, connected through the internet.' />
-    <meta property='og:url' content='https://christmas-gift-2020.herokuapp.com/' />
+    <meta property="og:title" content="<%= meta_title %>" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="<%= request.original_url %>" />
+    <meta property="og:image" content="<%= meta_image %>" />
+    <meta property="og:description" content="<%= meta_description %>" />
+    <meta property="og:site_name" content="<%= meta_title %>" />
     <!--TWITTER META TAGS -->
     <meta name='twitter:card' content='summary_large_image'>
-    <meta name='twitter:title' content="Christmas Gift 2020">
-    <meta name='twitter:description' content="A Christmas gift for the world in the dark COVID times of 2020. This is a non-profit project of two European friends seperated by many borders, connected through the internet.">
+    <meta name='twitter:title' content='Christmas Gift 2020'>
+    <meta name='twitter:description' content='A Christmas gift for the world in the dark COVID times of 2020. This is a non-profit project of two European friends seperated by many borders, connected through the internet.'>
     <meta name='twitter:image' content='https://christmas-gift-2020.herokuapp.com/'>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
