--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<!DOCTYPE html prefix="og: http://ogp.me/ns#">
+<!DOCTYPE html>
 <html>
   <head>
     <title>Christmas Gift 2020</title>
@@ -12,11 +12,18 @@
     <meta property="og:image" content="<%= meta_image %>" />
     <meta property="og:description" content="<%= meta_description %>" />
     <meta property="og:site_name" content="<%= meta_title %>" />
+    <meta property="og:image:width" content="1200px" />
+    <meta property="og:image:height" content="630px" />
     <!--TWITTER META TAGS -->
     <meta name='twitter:card' content='summary_large_image'>
     <meta name='twitter:title' content='Christmas Gift 2020'>
     <meta name='twitter:description' content='A Christmas gift for the world in the dark COVID times of 2020. This is a non-profit project of two European friends seperated by many borders, connected through the internet.'>
-    <meta name='twitter:image' content='https://christmas-gift-2020.herokuapp.com/'>
+    <meta name='twitter:image:src' content='<%= meta_image %>'>
+    <!-- app/views/offers/show.html.erb -->
+    <% content_for :meta_title, "#{@offer.name} is on #{DEFAULT_META["meta_product_name"]}" %>
+    <% content_for :meta_description, @offer.description %>
+    <% content_for :meta_image, cl_image_path(@offer.photo.path) %>
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
