--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,41 +3,41 @@
   <head>
     <title>Christmas Gift 2020</title>
     <%= favicon_link_tag %>
-    <%= display_meta_tags site: 'Christmas Gift 2020' %>
-    <meta name='theme-color' content='#fbf5b7'>
+    <%= display_meta_tags site: "Christmas Gift 2020" %>
+    <meta name="theme-color" content="#fbf5b7">
     <!--OG META TAGS -->
-    <meta property='og:title' content='<%= meta_title %>' />
-    <meta property='og:type' content='website' />
-    <meta property='og:url' content='<%= request.original_url %>' />
-    <meta property='og:image' content='<%= meta_image %>' />
-    <meta property='og:description' content='<%= meta_description %>' />
-    <meta property='og:site_name' content='<%= meta_title %>' />
-    <meta property='og:image:width' content='1200' />
-    <meta property='og:image:height' content='630' />
+    <meta property="og:title" content="<%= meta_title %>" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="<%= request.original_url %>" />
+    <meta property="og:image" content="<%= meta_image %>" />
+    <meta property="og:description" content="<%= meta_description %>" />
+    <meta property="og:site_name" content="<%= meta_title %>" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <!--TWITTER META TAGS -->
-    <meta name='twitter:card' content='summary_large_image'>
-    <meta name='twitter:title' content='Christmas Gift 2020'>
-    <meta name='twitter:description' content='A Christmas gift for the world in the dark COVID times of 2020. This is a non-profit project of two European friends seperated by many borders, connected through the internet.'>
-    <meta name='twitter:image:src' content='<%= meta_image %>'>
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Christmas Gift 2020">
+    <meta name="twitter:description" content="A Christmas gift for the world in the dark COVID times of 2020. This is a non-profit project of two European friends seperated by many borders, connected through the internet.">
+    <meta name="twitter:image:src" content="<%= meta_image %>">
     <!-- app/views/offers/show.html.erb -->
-    <% content_for :meta_title, "#{@offer.name} is on #{DEFAULT_META['meta_product_name']}" %>
+    <% content_for :meta_title, "#{@offer.name} is on #{DEFAULT_META["meta_product_name"]}" %>
     <% content_for :meta_description, @offer.description %>
     <% content_for :meta_image, cl_image_path(@offer.photo.path) %>
 
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track": "reload" %>
+    <%= javascript_pack_tag "application", "data-turbolinks-track": "reload" %>
   </head>
 
   <body>
     <%= link_to root_path do %>
-    <h1 class='title-heading'><%= title 'Christmas Gift 2020' %></h1>
+    <h1 class="title-heading"><%= title "Christmas Gift 2020" %></h1>
     <% end %>
     <%= yield %>
-    <div class='footer-container'>
-    <%= render 'shared/footer' %>
+    <div class="footer-container">
+    <%= render "shared/footer" %>
     </div>
   </body>
 </html>
