--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,25 +4,21 @@
     <title>Christmas Gift 2020</title>
     <%= favicon_link_tag %>
     <%= display_meta_tags site: "Christmas Gift 2020" %>
-    <meta name="theme-color" content="#fbf5b7">
+    
     <!--OG META TAGS -->
-    <meta property="og:title" content="<%= meta_title %>" />
+    <meta property="og:title" content="Christmas Gift 2020 - A Christmas Escape in Fantasy" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="<%= request.original_url %>" />
-    <meta property="og:image" content="<%= meta_image %>" />
-    <meta property="og:description" content="<%= meta_description %>" />
-    <meta property="og:site_name" content="<%= meta_title %>" />
+    <meta property="og:image" content="app/assets/images/cover.png" />
+    <meta property="og:description" content="A Christmas gift for the world in the dark COVID times of 2020. This is a non-profit project of two European friends seperated by many borders, connected through the internet." />
+    <meta property="og:site_name" content="Christmas Gift 2020 - A Christmas Escape in Fantasy" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <!--TWITTER META TAGS -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Christmas Gift 2020">
     <meta name="twitter:description" content="A Christmas gift for the world in the dark COVID times of 2020. This is a non-profit project of two European friends seperated by many borders, connected through the internet.">
-    <meta name="twitter:image:src" content="<%= meta_image %>">
-    <!-- app/views/offers/show.html.erb -->
-    <% content_for :meta_title, "#{@offer.name} is on #{DEFAULT_META["meta_product_name"]}" %>
-    <% content_for :meta_description, @offer.description %>
-    <% content_for :meta_image, cl_image_path(@offer.photo.path) %>
+    <meta name="twitter:image:src" content="app/assets/images/cover.png">
 
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
